overflow fix

--- a/app/scss/pages/_formpage.scss
+++ b/app/scss/pages/_formpage.scss
@@ -1,7 +1,5 @@
 .formpage,
 .application-page {
-  overflow: hidden;
-
   .title-wrapper {
     padding-top: 10px;
     padding-bottom: 5px;
